--- a/package.json
+++ b/package.json
@@ -9,10 +9,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^19.1.1",
-    "react-dom": "^19.1.1",
     "framer-motion": "^12.23.22",
     "prop-types": "^15.8.1",
+    "proptypes": "^1.1.0",
+    "react": "^19.1.1",
+    "react-dom": "^19.1.1",
     "react-router-dom": "^7.8.2",
     "styled-components": "^6.1.19"
   },
